# dtu-rl-hydro

./: LICENSE  README.md  main.py  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
exercises/: week00_course_intro.ipynb
notes/: notes_MDPs
resources/: resources.md
src/dtu_rl_hydro/: data.py
src/rl_hydro_course/: train.py
tests/: test_data.py
