[build-system]
requires = ["uv_build>=0.9.22,<0.11.0"]
build-backend = "uv_build"

[project]
name = "dtu_rl_hydro"
version = "0.0.1"
description = "Reinforcement Learning application for hydropower scheduling offered by DTU."
authors = [
  { name = "Marco Saretta", email = "mcsr@dtu.dk" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm",
    "seaborn",
    "scikit-learn",
    "matplotlib",
    "requests",
    "numpy>=2.0.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "pandas>=3.0.0",
    "gymnasium>=1.2.3",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff>=0.15.1",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[tool.uv]
package = true
